# serializer version: 1
# name: test_card_events[created]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'card_id': 102,
      'card_type_id': 20,
      'card_type_name': 'Task',
      'column_id': 10,
      'column_name': 'To do',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: 'card_created',
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BoardOil - Work Card',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:card-outline',
      'slick_name': 'Summer',
      'tag_names': list([
        'Home',
      ]),
      'title': 'Water the plants',
    }),
    'context': <ANY>,
    'entity_id': 'event.boardoil_work_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-01T12:00:00.000+00:00',
  })
# ---
# name: test_card_events[moved]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'card_id': 101,
      'card_type_id': 20,
      'card_type_name': 'Task',
      'column_id': 11,
      'column_name': 'Done',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: 'card_moved',
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BoardOil - Work Card',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:card-outline',
      'slick_name': 'Summer',
      'tag_names': list([
        'Home',
      ]),
      'title': 'Water the plants',
    }),
    'context': <ANY>,
    'entity_id': 'event.boardoil_work_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-01T12:00:00.000+00:00',
  })
# ---
# name: test_card_events[removed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'card_id': 101,
      'card_type_id': 20,
      'card_type_name': 'Task',
      'column_id': 10,
      'column_name': 'To do',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: 'card_removed',
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BoardOil - Work Card',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:card-outline',
      'slick_name': 'Summer',
      'tag_names': list([
        'Home',
      ]),
      'title': 'Water the plants',
    }),
    'context': <ANY>,
    'entity_id': 'event.boardoil_work_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-01T12:00:00.000+00:00',
  })
# ---
# name: test_card_events[updated]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'card_id': 101,
      'card_type_id': 20,
      'card_type_name': 'Task',
      'column_id': 10,
      'column_name': 'To do',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: 'card_updated',
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BoardOil - Work Card',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:card-outline',
      'slick_name': 'Summer',
      'tag_names': list([
        'Home',
      ]),
      'title': 'Updated task',
    }),
    'context': <ANY>,
    'entity_id': 'event.boardoil_work_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-01T12:00:00.000+00:00',
  })
# ---
# name: test_entities[event.boardoil_work_card-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.boardoil_work_card',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Card',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:card-outline',
    'original_name': 'Card',
    'platform': 'boardoil',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'card',
    'unique_id': 'boardoil-entry_1_card_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.boardoil_work_card-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'card_created',
        'card_moved',
        'card_removed',
        'card_updated',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BoardOil - Work Card',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:card-outline',
    }),
    'context': <ANY>,
    'entity_id': 'event.boardoil_work_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
